# couple_finances

./: .dockerignore  .env  Dockerfile  README.md  check_db.py  finance.db  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5d67bdbeefe1_add_payment_date_to_bills.py
core/: config.py  security.py
db/: base.py  session.py
models/: bill.py  category.py
routes/: bill.py  categories.py
schemas/: bill.py  category.py
services/: bills.py  categories.py
tests/: conftest.py  test_categories.py
